--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,11 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 .header-footer-logo-part {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 
 .nav {
