--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .nav:hover,
@@ -61,7 +62,6 @@ ul {
 }
 
 .section1-btn {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
