--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ ul {
   background-color: #e7e9fc;
 }
 
-.header-footer-logo {
+.header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -146,5 +146,15 @@ ul {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: #f4f4fd;
 }
