--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,11 @@ ul {
 
 .navigation:hover,
 .navigation:active,
-.address:hover {
+.addr:hover {
   color: #404bbf;
 }
 
-.address {
+.addr {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
