--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,11 @@ ul {
   font-style: normal;
 }
 
-.content1 {
+.con-one {
   background-color: #2e2f42;
 }
 
-.content1-title {
+.con-one-title {
   color: #fff;
   font-weight: 700;
   font-size: 56px;
@@ -65,16 +65,18 @@ ul {
   text-align: center;
 }
 
-.content1-btn {
+.con-one-btn {
   background: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  cursor: pointer;
 }
 
-.content1-btn:hover {
+.con-one-btn:hover,
+.con-one-btn:focus {
   background-color: #404bbf;
 }
 
