--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,11 @@ ul {
   font-style: normal;
 }
 
-.aaa {
+.piece {
   background-color: #2e2f42;
 }
 
-.bbb {
+.piece_text {
   color: #fff;
   font-weight: 700;
   font-size: 56px;
@@ -65,7 +65,7 @@ ul {
   text-align: center;
 }
 
-.ccc {
+.piece_button {
   background: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
@@ -75,8 +75,8 @@ ul {
   cursor: pointer;
 }
 
-.ccc:hover,
-.ccc:focus {
+.piece_button:hover,
+.piece_button:focus {
   background-color: #404bbf;
 }
 
