--- a/css/styles.css
+++ b/css/styles.css
@@ -80,14 +80,14 @@ ul {
   background-color: #404bbf;
 }
 
-.piece2_title {
+.piece_two_title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
 
-.piece2_text {
+.piece_two_text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
