--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ ul {
   background-color: #e7e9fc;
 }
 
-.top-logo {
+.top_logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -22,7 +22,7 @@ ul {
   color: #4d5ae5;
 }
 
-.top-logo-part {
+.top_logo_part {
   color: #2e2f42;
 }
 
