--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,8 @@ ul {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 
 .piece_four_title_two {
@@ -144,6 +146,7 @@ ul {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .piece_four_text {
